data/derived/comb/progs/unify/prog0004.ml.out
Characters 64-75:
  | (x::xs') -> x + sumList xs';;
                    ^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
